# workflow-service

./: .gitignore  docker-compose.yml
Auth_gateway/: Dockerfile.auth  Dockerfile.openresty  auth_service.py  nginx.conf  realm.json  requirements.txt
Auth_gateway/lua/: auth.lua
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/src/: main.py
backend/src/agent/: __init__.py  agent.py  circuit_breaker.py  graph_executor.py  graph_registry.py  intent_classifier.py  llm_utils.py  models.py  prompts.py  service.py  tool_executor.py  utils.py  workflow_service.py
backend/src/agent/graph/: builder.py
backend/src/agent/graph/nodes/: HITL.py  llm_node.py  supervisor.py  tool_node.py
backend/src/agent/utils/: circuit_breaker.py  llm_client.py  prompt_service.py  tool_registry_service.py
backend/src/aop_logging/: __init__.py  aop_logger.py  config.py  logger.py  middleware.py  models.py
backend/src/api/v1/: __init__.py  api_models.py  routes.py
backend/src/config/: config.py
backend/src/db/: __init__.py  database.py  models.py
backend/src/logs/: app.log.2026-03-26_14  app.log.2026-03-26_16
frontend/: .gitignore  Dockerfile  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/: auth.guard.ts
frontend/src/app/core/services/: auth.service.ts  chat.service.ts
frontend/src/app/features/chat/: chat.component.scss  (+1 more)
(+2 files in other folders)
