[project]
name = "agent-backend"
version = "0.1.0"
description = "Generalized LangGraph Agent Backend Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.34.0",
    "dotenv>=0.9.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "aspectlib>=0.1.0",
]
[tool.setuptools.packages.find]
where = ["src"]
